[package]
name = "btech-rs"
version = "0.1.0"
edition = "2021"
default-run = "client"

[features]
debug = ["dep:bevy-inspector-egui"]
infantry = []
vehicle = []
aerospace = []
dropship = []
protomech = []

[dependencies]
bevy = "0.16.1"
bevy-inspector-egui = {version = "0.32.0", optional = true}
hexx = "0.21.0"
rand = "0.9.2"
